--- a/Beanstream/Beanstream.csproj
+++ b/Beanstream/Beanstream.csproj
@@ -8,7 +8,7 @@
     <ProjectGuid>{B219AA1C-22FA-4161-AC6A-492A5A05D37E}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Beanstream</RootNamespace>
+    <RootNamespace>Beanstream.Api.SDK</RootNamespace>
     <AssemblyName>Beanstream</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
@@ -59,6 +59,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Configuration.cs" />
     <Compile Include="Domain\Card.cs" />
+    <Compile Include="Requests\LegatoTokenRequest.cs" />
+    <Compile Include="Responses\AvsResponse.cs" />
     <Compile Include="Responses\IResponse.cs" />
     <Compile Include="Responses\PaymentResponse.cs" />
     <Compile Include="Requests\TokenPaymentRequest.cs" />
@@ -121,12 +123,7 @@
       </Properties>
     </MonoDevelop>
   </ProjectExtensions>
-  <ItemGroup>
-    <Folder Include="Domain\" />
-    <Folder Include="Requests\" />
-    <Folder Include="Responses\" />
-    <Folder Include="Beanstream\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
